# template

./: . editorconfig  .ecrc  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.MD  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.MD  CONTRIBUTING.md  LICENSE  README-template.md  README.md  docker_env  environment.yml  mypy.ini  pyproject.toml  requirements-dev.txt  setup.cfg
.github/: .markdownlint-cli2.jsonc  PULL_REQUEST_TEMPLATE.MD  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: continuous-integration.yml  release.yml
docker/: Dockerfile  Dockerfile-dev  Dockerfile-script-runner  build  cibuild  console  docs-server  env  format  lint  notebook  run-script  stac  test
docs/: example.ipynb  installation_and_basic_usage.ipynb
examples/: collection.json
examples/example-item/: example-item.json
scripts/: lint  rename  stactools-version.py  test  update  update-examples
src/stactools/ephemeral/: __init__.py  commands.py  stac.py
src/stactools/package/: __init__.py  commands.py
tests/: test_commands.py  test_module.py  test_stac.py
